<resources>
    <string name="app_name">Link by MATSANDA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="byMATSANDA">by MATSANDA</string>
    <string name="logo_description">Logo Link by MATSANDA</string>
    <string name="link">Link</string>
    <string name="baca"><u>Baca</u></string>
    <string name="berita_terbaru">Berita Terbaru</string>
    <string name="podcast">Podcast</string>
    <string name="video">Video</string>
    <string name="berita">Berita</string>
    <string name="cari">Cari</string>
    <string name="Lorem_Ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</string>
    <string name="filler_date">Senin, 21 April 2025</string>
    <string name="no_results">No Results</string>
    <string name="hasil_teratas">Hasil Teratas</string>
    <string name="template_ringkasan">Konten-Konten Video dan Podcast terbaru dari MTsN 2 Kota Malang!</string>
    <string name="template_ringkasan_berita">Temukan dan baca berita dan artikel-artikel terbaru dan terupdate dari MTsN 2 Kota Malang!</string>
</resources>