<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:padding="7dp"
            android:background="@drawable/button_bg"
            android:id="@+id/search_back_button"
            android:layout_gravity="center_vertical"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/back_button"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:ellipsize="end"
            android:singleLine="true"
            android:scrollHorizontally="false"
            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/link_green"
            android:text="Pencarian:"
            android:layout_gravity="center_vertical"
            android:id="@+id/search_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:layout_marginStart="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_teratas"
                android:textColor="@color/link_green"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                app:drawableStartCompat="@drawable/topresults"
                app:drawableTint="@color/link_green" />

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="visible"
                android:indeterminateTint="@color/link_green"
                android:layout_gravity="center"
                android:id="@+id/search_top_pb"/>

            <TextView
                android:id="@+id/search_top_no_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins"
                android:textSize="16dp"
                android:padding="10dp"
                android:textColor="@color/link_grey"
                android:text="@string/no_results"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_top_rv"/>

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:layout_marginStart="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berita"
                android:textColor="@color/link_green"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                app:drawableStartCompat="@drawable/berita"
                app:drawableTint="@color/link_green" />

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="visible"
                android:indeterminateTint="@color/link_green"
                android:layout_gravity="center"
                android:id="@+id/search_berita_pb"/>

            <TextView
                android:id="@+id/search_berita_no_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:padding="10dp"
                android:textColor="@color/link_grey"
                android:text="@string/no_results"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_berita_rv"/>

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:layout_marginStart="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                android:textColor="@color/link_green"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                app:drawableStartCompat="@drawable/baseline_personal_video_24"
                app:drawableTint="@color/link_green" />

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="visible"
                android:indeterminateTint="@color/link_green"
                android:layout_gravity="center"
                android:id="@+id/search_videos_pb"/>

            <TextView
                android:id="@+id/search_video_no_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:padding="10dp"
                android:textColor="@color/link_grey"
                android:text="@string/no_results"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_video_rv"/>

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:layout_marginStart="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/podcast"
                android:textColor="@color/link_green"
                android:textSize="20sp"
                android:fontFamily="@font/poppins"
                app:drawableStartCompat="@drawable/podcast"
                app:drawableTint="@color/link_green" />

            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="visible"
                android:indeterminateTint="@color/link_green"
                android:layout_gravity="center"
                android:id="@+id/search_podcasts_pb"/>

            <TextView
                android:id="@+id/search_podcast_no_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/poppins"
                android:textSize="16sp"
                android:padding="10dp"
                android:textColor="@color/link_grey"
                android:text="@string/no_results"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/search_podcast_rv"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>